<resources>
    <string name="app_name">Neuron</string>
    <string name="title_activity_my_wifi">MyWifiActivity</string>
    <string name="neuron">Neuron</string>
    <string name="find_devices">Find Devices</string>
    <string name="my_device_info">"My device info: "</string>
    <string name="wifi_p2p_status">"Wifi P2P Status: "</string>
    <string name="___">---</string>
    <string name="send_msg">Send Msg</string>
    <string name="title_activity_find_device">FindDeviceActivity</string>
    <string name="devices">Devices:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_files_to_share">Add files to share</string>
    <string name="logo">LOGO</string>
    <string name="look_world_through_the_wifi">Look world through the wifi</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="wifi_icon">wifi Icon</string>
    <string name="discover">Discover</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="connecting">Connect</string>
    <string name="image">IMAGE</string>
    <string name="file">file</string>
    <string name="pdf">pdf</string>
    <string name="video">VIDEO</string>
    <string name="get">Get</string>
    <string name="files">Files</string>
    <string name="button">Button</string>
    <string name="message">message</string>
    <string name="wifi_on">wifiOn</string>
    <string name="Discover">Discover</string>
    <string name="send">send</string>
    <string name="connection_status">ConnectionStatus</string>
</resources>
