<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_4">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/text_device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dimen_10" />

    <ImageButton
        android:id="@+id/img_btn_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_cancel"
        android:tint="@android:color/white"
        android:contentDescription="@string/disconnect" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>