<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464e59"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/look_world_through_the_wifi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_15" />

        <Button
            android:id="@+id/btn_lets_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_40"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/let_s_go"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />

    </RelativeLayout>


</LinearLayout>